--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <button @click="toggleLanguage()" 
                 class="bg-white/10 backdrop-blur-md px-4 py-2 rounded-full border border-white/20 hover:bg-white/20 transition-all duration-300">
             <span x-show="currentLang === 'ar'">🇺🇸 EN</span>
-            <span x-show="currentLang === 'en'">🇸🇦 AR</span>
+            <span x-show="currentLang === 'en'">🇲🇦 AR</span>
         </button>
     </div>
 
