--- a/app/webppl/human_decision_webppl.html
+++ b/app/webppl/human_decision_webppl.html
@@ -414,7 +414,7 @@
                 <strong>CPF~ Lite - Smart Aggregated Probabilistic Cognitive Framework</strong>
             </div>
             <div class="text-xs text-indigo-400">
-                💻 تطوير: <strong>إبراهيم البيدي</strong> × <strong>Claude (Anthropic)</strong>
+                💻 تطوير: <strong>إبراهيم بيدي</strong> × <strong>Claude (Anthropic)</strong>
                 <br>
                 🔬 جلسات الفايبينغ الإبداعية - من الفكرة إلى التطبيق
                 <br>
